// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RegistrationEventInfo does not render empty contact info 1`] = `
<div>
  <article
    class="MuiBox-root css-3xv5eg"
  >
    <div
      aria-level="2"
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-2isvyx-MuiGrid-root"
      role="heading"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
      >
        <button
          aria-label="expand row"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-14su50-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="KeyboardArrowRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
            />
          </svg>
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1k02gnc-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-1xuxy9e-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-30xnsx-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
            >
              Suomen Noutajakoirajärjestö ry
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-sm-auto MuiGrid-grid-xs-12 css-tm6qyb-MuiGrid-root"
        >
          NOU dateFormat.datespan end, start test location (test)
        </div>
      </div>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-qnbeac-MuiCollapse-root"
      role="region"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-s2gu2c-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                entryTime
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                dateFormat.datespan end, start
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                event.organizer
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                Suomen Noutajakoirajärjestö ry
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                event.judges
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                Tuomari 1
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                paymentDetails
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                123 €
                . 
                <span
                  class="MuiTypography-root MuiTypography-caption css-mpaqru-MuiTypography-root"
                >
                  paymentTimeOptions.registration
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                event.priority
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                <div
                  class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ktmok0-MuiChip-root"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                  >
                    priority.members
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                event.description
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                test
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`RegistrationEventInfo renders 1`] = `
<div>
  <article
    class="MuiBox-root css-3xv5eg"
  >
    <div
      aria-level="2"
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-2isvyx-MuiGrid-root"
      role="heading"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
      >
        <button
          aria-label="expand row"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-14su50-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="KeyboardArrowRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
            />
          </svg>
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1k02gnc-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-1xuxy9e-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-30xnsx-MuiGrid-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
            >
              Suomen Noutajakoirajärjestö ry
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-sm-auto MuiGrid-grid-xs-12 css-tm6qyb-MuiGrid-root"
        >
          NOU dateFormat.datespan end, start test location (test)
        </div>
      </div>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-qnbeac-MuiCollapse-root"
      role="region"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-s2gu2c-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                entryTime
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                dateFormat.datespan end, start
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                event.organizer
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                Suomen Noutajakoirajärjestö ry
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                event.judges
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                Tuomari 1
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                event.official
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                Teemu Toimitsija, 040-official, official@example.com
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                event.secretary
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                Siiri Sihteeri, 040-secretary, secretary@example.com
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                paymentDetails
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                123 €
                . 
                <span
                  class="MuiTypography-root MuiTypography-caption css-mpaqru-MuiTypography-root"
                >
                  paymentTimeOptions.registration
                </span>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                event.priority
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                <div
                  class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ktmok0-MuiChip-root"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                  >
                    priority.members
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-lg-4 MuiGrid-grid-md-6 MuiGrid-grid-xl-2 MuiGrid-grid-xs-12 css-1hik0m1-MuiGrid-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1fc513k-MuiTypography-root"
              >
                event.description
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                test
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;
